examples/invalid/04_division_by_zero.moo
fun main() -> Int do
  let x: Int := 10
  let y: Int := 0
  return x / y
end-main